--- a/generators/store/Store.js.hbs
+++ b/generators/store/Store.js.hbs
@@ -1,4 +1,5 @@
 import {types} from 'mobx-state-tree';
+import remotedev from 'mobx-remotedev';
 
 const {{properCase name}}Store = types.model('{{properCase name}}Store', {
   name: types.string,
@@ -8,6 +9,8 @@ const {{properCase name}}Store = types.model('{{properCase name}}Store', {
   return {};
 });
 
-export default {{properCase name}}Store.create({
+const instance = {{properCase name}}Store.create({
   name: 'Test',
 });
+
+export default remotedev(instance);
