[skip ci] Update generators + add script command

--- a/generators/store/__specs__/Store.spec.js.hbs
+++ b/generators/store/__specs__/Store.spec.js.hbs
@@ -1,11 +1,16 @@
 import {{properCase name}}Store from '../{{properCase name}}';
 
-const test{{properCase name}} = {
-  title: 'test'
+const defaultState = {
 };
 
-it('testing {{camelCase name}} store', () => {
+describe('{{properCase name}} Store', () => {
 
-  expect(true).toBe(false);
+  describe('Action', () => {
 
-});
+    it('Foo', () => {
+      expect(true).toBe(false);
+    });
+
+  });
+
+)};
